Changelog for Mojolicious-Plugin-DBIC

{{ $NEXT }}

0.004     2021-03-23 11:37:16-05:00 America/Chicago

    [Fixed]

    - Fixed compatibility with Mojolicious 9:

        - Fixed missing braces in CSS selectors in tests. Thanks @eserte
          for reporting and @drdrew42 for fixing! [Github #3]

0.003     2018-12-15 16:43:57-06:00 America/Chicago

    [Added]

    - Added "set" and "delete" actions. This allows for creating,
      editing, and deleting rows from the database.

0.002     2018-12-03 22:44:54-06:00 America/Chicago

    [Added]

    - Added test for inheriting from DBIC controller
    - Added not found response to `get` action when row isn't found

    [Fixed]

    - Fixed missing dependencies. Thanks @eserte!

0.001     2018-12-02 20:47:57-06:00 America/Chicago

    [Added]

    - Added plugin with schema configuration
    - Added basic controller with "list" and "get" actions